objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Employee_Benefits__c</fullName>
        <inlineHelpText>Beispiele: Kinderbetreuung, Zusatzversicherung, Firmenwagen, Firmen-Rente, Unterkunft, Hilfe bei der Wohnungssuche etc.</inlineHelpText>
        <label>Employee benefits Ⓜ️</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LostReasonComment__c</fullName>
        <label>Lost Reason Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MigrationProtocol__c</fullName>
        <label>Migration Protocol</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OpportunityEditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Editor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period_of_Payment__c</fullName>
        <label>Period of Payment</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PostalCodeAccount__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionCandidate__c</fullName>
        <label>Condition Candidate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Main_Focus__c</fullName>
        <inlineHelpText>Welche aktuellen Schwerpunkte, Tätigkeiten, Funktionen übernimmt der Kandidat aktuell?</inlineHelpText>
        <label>aktuelle Funktionen</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DiscoveryCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Time_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is a Full-time position required?
Robin S. 13.06.2019</description>
        <label>Full-Time Position Ⓜ️</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfCandidates__c</fullName>
        <label>Number of Candidates</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Children__c</fullName>
        <label>Number of Children</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part_Time_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is a Part-time position required?
Robin S. 13.06.2019</description>
        <label>Part-Time Position Ⓜ️</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profiledescription__c</fullName>
        <label>Profiledescription</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_description__c</fullName>
        <description>sfc-2819</description>
        <label>Source description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Allowances__c</fullName>
        <label>Special allowances</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialist_Profile__c</fullName>
        <description>specialist profile of the needed doctor.
Robin S. 13.06.2019</description>
        <label>Specialist Profile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_Reduction__c</fullName>
        <label>Supplier Reduction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_CaregiverJobFull__c</fullName>
        <label>[T]Caregiver Job Full</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TariffCompensation__c</fullName>
        <label>Tariff Compensation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TravelcostsHousing__c</fullName>
        <label>Travelcosts &amp; Housing Ⓜ️</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_services__c</fullName>
        <description>SFC-2356</description>
        <label>Additional services</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Changing_Motivation__c</fullName>
        <label>Changing motivation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ConditionClinicAssi__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Stundensätze angeben</inlineHelpText>
        <label>Condition Clinic (Assi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Certificate__c</fullName>
        <label>Date of Certificate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFC-2356</description>
        <label>Individual customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalDescription__c</fullName>
        <description>Internal Description field for the Portal Team.
Robin S. 22.11.2019</description>
        <label>Internal Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_Employees__c</fullName>
        <description>Shows the &quot;Number of Employees&quot; of the Account.
Robin S. 13.06.2019</description>
        <formula>TEXT(Account.NumberOfEmployees__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Employees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Occupation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Previous_Year__c</fullName>
        <label>Sales Previous Year ÄÄ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TSuggestedCandidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auxiliary field to provide a look up for the candidate suggestion flow and the flow look up component (used as search field) for the candidate.</description>
        <label>[T] Suggested Candidate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities ([T] Candidate Suggestion)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T_AmountOfCampaigns__c</fullName>
        <label>[T]Amount Of Campaigns</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TypePeriodOfService__c</fullName>
        <label>Type/Period Of Service Ⓜ️</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Year_Of_Training_AD__c</fullName>
        <label>Year of training AD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>weitere_Erfahrungen__c</fullName>
        <label>weitere Erfahrungen</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ConditionCandidateFA__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Stundensätze angeben</inlineHelpText>
        <label>Condition Candidate (FA) Ⓜ️</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condition_Caregivers__c</fullName>
        <description>SFC-2558</description>
        <label>Condition Caregivers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PflegeQualifizierung__c</fullName>
        <label>Pflege-Qualifizierung</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Berufe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlaceofActionAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Die Einrichtung in der der Arzt arbeiten soll.</inlineHelpText>
        <label>Place of Action Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities als Einsatz</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Optimization__c</fullName>
        <label>Process Optimization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROIAnalysisCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestedStateCanton__c</fullName>
        <description>RequestedStateCanton can be set. Global Value set is used for.
Robin S. 17.06.2019</description>
        <label>RequestedStateCanton</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RequestedStateCanton</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Takeover_Of_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Takeover of services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalInfoStation__c</fullName>
        <label>Additional Info Station</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Limit_Upper_Limit__c</fullName>
        <label>Age limit (upper limit)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_of_Competitors__c</fullName>
        <formula>Account.T_Competitors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount of Competitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C_WBE_of_the_Hospital__c</fullName>
        <description>CÄ WBE of the Hospital</description>
        <label>CÄ WBE of the Hospital</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Management_Experience__c</fullName>
        <inlineHelpText>Hat der Kandidat Erfahrung in MA-Führung? In welcher Teamstärke?</inlineHelpText>
        <label>Führungserfahrung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chief_Doctor_Currently__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chief doctor currently</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Chefarzt aktuell)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConditionCandidateAssi__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Stundensätze angeben</inlineHelpText>
        <label>Condition Candidate (Assi) Ⓜ️</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContactPersonEmployees__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person Employees</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact Person Employees)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractual_agreements__c</fullName>
        <description>SFC-2356</description>
        <label>Contractual agreements</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CurrentlyTalkWithPotAG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lfd. Gespräche mit pot. AG?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pflege_Weiterbildungen__c</fullName>
        <label>Pflege-Weiterbildungen</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Weiterbildungen</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_In_The_Quarter__c</fullName>
        <label>Planned in the quarter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Range_Of_Tasks_Vacancy__c</fullName>
        <label>Range of tasks vacancy Ⓜ️</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Account_is_New__c</fullName>
        <formula>CloseDate   &gt;=    Account.T_Qualified_to_Active_Date__c &amp;&amp; CloseDate  &lt;=  Account.T6Months_after_Account_is_active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]Related Account is New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Running_User_in_Report__c</fullName>
        <formula>IF( Owner.Id =  $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Running User in Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Previous_Year_PK__c</fullName>
        <label>Sales Previous Year PK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SendProfileWithoutTalk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Kandiat erlaubt Profilversand ohne gesonderte Rücksprache</inlineHelpText>
        <label>Profilversand ohne Rücksprache ok?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alleinstellungsmerkmale__c</fullName>
        <label>Alleinstellungsmerkmale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPersonSpeciality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person Speciality</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact Person Speciality)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fort_und_Weiterbildungn__c</fullName>
        <label>Fort- und Weiterbildungn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Attainment_Actions__c</fullName>
        <label>Goal Attainment Actions</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Sent_Camapign_Date__c</fullName>
        <label>Last Sent Camapign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_tariff_compensation__c</fullName>
        <description>This field is only editable if the value &quot;non-tariff&quot; is picked in the compensation picklist field.
Robin S. 13.06.2019</description>
        <label>Non-tariff compensation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PartTimePositionPercent__c</fullName>
        <description>This field describes the part time position.
Robin S. 27.09.2019</description>
        <label>Part-Time Position (%)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25 %</fullName>
                </value>
                <value>
                    <fullName>50 %</fullName>
                </value>
                <value>
                    <fullName>75 %</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification_Caregiver__c</fullName>
        <label>Qualification Caregiver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Berufe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TechnicalQualifications__c</fullName>
        <label>Technical Qualifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fachkunde</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_Is_Out_Of_Question__c</fullName>
        <label>What is out of question?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Titel_Planned__c</fullName>
        <label>Zusatzbezeichnung (geplant)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zusatzbezeichnung</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approbation_erforderlich__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approbation erforderlich</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Condition_PP_valid_until__c</fullName>
        <description>SFC-2558</description>
        <label>Condition PP valid until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Supply_Situation__c</fullName>
        <label>Current Supply Situation</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_medical_certificate__c</fullName>
        <description>Date of the medical certificate.
Robin S. 17.06.2019</description>
        <label>Date medical certificate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_examination_year__c</fullName>
        <description>This field is needed for placement caregiver.
Robin S. 27.09.2019</description>
        <label>Date of examination year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Erforderliche_Unterlagen__c</fullName>
        <label>Erforderliche Unterlagen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Erforderliche_Unterlagen</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Recruiter_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other recruiter involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_negotiation_date__c</fullName>
        <description>SFC-2356</description>
        <label>Planned negotiation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AdditionalSpecialisations__c</fullName>
        <description>Shows the specialisation of the PersonAccount.
Robin S. 17.06.2019</description>
        <formula>Account.AdditionalSpecialisations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Specialisations</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_of_the_vacancy__c</fullName>
        <description>Text area to describe the background of the vacancy.
Robin S. 13.06.2019</description>
        <label>Background of the vacancy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Commercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFC-2356</description>
        <label>Contact Person Commercial</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact Person Commercial)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Purchasing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFC-2356</description>
        <label>Contact Person Purchasing</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact Person Purchasing)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Further_Education_planned__c</fullName>
        <label>Further Education (planned)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Weiterbildungen</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Distribution_Key__c</fullName>
        <label>Position distribution key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_To_Attend_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required to attend school</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salary_Expectations_Ideal__c</fullName>
        <label>Salary expectations ideal</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Previous_Year_PP_AA__c</fullName>
        <label>Sales Previous Year PP ÄÄ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Previous_Year_PP_PK__c</fullName>
        <label>Sales Previous Year PP PK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Previous_Year_Total__c</fullName>
        <label>Sales Previous Year Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Academic_teaching_hospital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Academic teaching hospital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anzahl_Mitarbeiter_im_Haus__c</fullName>
        <label>Anzahl Mitarbeiter im Haus</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Strategy_Customer__c</fullName>
        <label>Supplier Strategy Customer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Supplier Strategy</fullName>
                </value>
                <value>
                    <fullName>Preferred Supplier</fullName>
                </value>
                <value>
                    <fullName>Master Vendor/MSP</fullName>
                </value>
                <value>
                    <fullName>E-Sourcing via Platform</fullName>
                </value>
                <value>
                    <fullName>Onsite Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weiterbildungserm_chtigung__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weiterbildungsermächtigung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASP_f_r_Opp_bei_Einrichtung__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ASP für Opp bei Einrichtung</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anzahl_Rufdienste_Monat_max__c</fullName>
        <label>Anzahl Rufdienste/Monat max</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Features_Department__c</fullName>
        <label>Special features department</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vacancy_Publicly_Advertised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vacancy Publicly advertised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_until_Bonus_agreement__c</fullName>
        <description>SFC-2356</description>
        <label>Valid until (Bonus agreement)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AdditionalProfileInformation__c</fullName>
        <label>Additional Profile Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CurrentTalkWithOtherAgencies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lfd. Gespräche mit Agenturen?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salary_expectations_At_Least__c</fullName>
        <label>Salary expectations at least</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specialist_Knowledge_Planned__c</fullName>
        <label>Specialist knowledge (planned)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fachkunde</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_CaregiverFurtherEducations__c</fullName>
        <label>[T]Caregiver Further Educations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Willingness_Duty_Taking_Over__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Willingness duty taking over</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_exposed_to_radiation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity exposed to radiation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment_on_sales_expectations__c</fullName>
        <description>SFC-2356</description>
        <label>Comment on sales expectations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Condition_Doctors_valid_until__c</fullName>
        <description>SFC-2558</description>
        <label>Condition Doctors valid until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fachsprachenpr_fung_vorhanden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fachsprachenprüfung vorhanden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pflege_praktische_Erfahrungen__c</fullName>
        <label>Pflege-praktische Erfahrungen</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Praktische_Erfahrungen</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRecipientCandidateSuggestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auxiliary field to provide a look up for the candidate suggestion flow and the flow look up component (used as search field) for the recipient.</description>
        <label>[T] Recipient Candidate Suggestion</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Bitte wähle einen Personen Account aus!</errorMessage>
            <filterItems>
                <field>Contact.IsPersonAccount</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities ([T] Recipient Candidate Suggestion)</relationshipLabel>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template_1_Contract_offer_for__c</fullName>
        <description>SFC-2356</description>
        <label>Template 1. Contract offer for</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Department_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person Department Head</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact Person Department Head)</relationshipLabel>
        <relationshipName>Opportunities8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_leadership_experience__c</fullName>
        <description>Expected leadership experience of the required doctor.
Robin S. 13.06.2019</description>
        <label>Expected leadership experience Ⓜ️</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 2 Years</fullName>
                </value>
                <value>
                    <fullName>2 - 5 Years</fullName>
                </value>
                <value>
                    <fullName>5 &gt; Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Further_education_and_training__c</fullName>
        <description>Further education and training of the Person Account.
Robin S. 17.06.2019</description>
        <formula>Account.ContinuingEducation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Further education and training</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Communication_Medium__c</fullName>
        <label>Preferred communication medium</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobiltelefon</fullName>
                </value>
                <value>
                    <fullName>Festnetz Telefon</fullName>
                </value>
                <value>
                    <fullName>Dienstliches Telefon</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>WhatsApp</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary_Expectations_Irrelevant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salary expectations irrelevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Success_and_Profit_Probability__c</fullName>
        <label>Success and Profit Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>T_CaregiverPracticalExperiences__c</fullName>
        <label>[T] CaregiverPracticalExperiences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_OppRecordType_PlacementModell__c</fullName>
        <formula>RecordType.DeveloperName &amp; &apos;-&apos; &amp;  Text(PlacementModel__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]Opp RecordType &amp; PlacementModell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_until_Additional_services__c</fullName>
        <description>SFC-2356</description>
        <label>Valid until (Additional services)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Condition_Caregivers_valid_until__c</fullName>
        <description>SFC-2558</description>
        <label>Condition Caregivers valid until</label>
        <type>Date</type>
    </fields>
</CustomObject>